Fix text overlap

--- a/custom.css
+++ b/custom.css
@@ -489,7 +489,7 @@ margin: 15px;}
 */
 
 #mw-pages h3+ul {
-margin-top: -25px;
+margin-top: -10px;
 margin-left: 41px;
 }
 
